--- a/_config.yml
+++ b/_config.yml
@@ -9,18 +9,18 @@ permalink:           pretty
 #relative_permalinks: true
 
 # Setup
-title:               Lanyon
-tagline:             'A Jekyll theme'
-description:         'A reserved <a href="http://jekyllrb.com" target="_blank">Jekyll</a> theme that places the utmost gravity on content with a hidden drawer. Made by <a href="https://twitter.com/mdo" target="_blank">@mdo</a>.'
-url:                 http://lanyon.getpoole.com
+title:               Anmol Bhullar
+tagline:             'An Undergraduate Attempts Math'
+description:         'My personal website where I have my resume and showcase some of my side projects'
+url:                 http://anmolbhullar.me
 baseurl:             ''
 paginate:            5
 
 # About/contact
 author:
-  name:              Mark Otto
+  name:              Anmol Bhullar
   url:               https://twitter.com/mdo
-  email:             markdotto@gmail.com
+  email:             anmol.bhullar@mail.utoronto.ca
 
 # Custom vars
 version:             1.0.0
