fixed some typos from the about page, fixed broken link of github project in sidebar and added a new page for downloads

--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ paginate:            5
 # About/contact
 author:
   name:              Anmol Bhullar
-  url:               https://twitter.com/mdo
+  url:               https://github.com/anmolbhullar
   email:             anmol.bhullar@mail.utoronto.ca
 
 # Custom vars
