added math jax to website

--- a/_config.yml
+++ b/_config.yml
@@ -15,6 +15,7 @@ description:         'My personal website where I have my resume and showcase so
 url:                 http://anmolbhullar.me
 baseurl:             ''
 paginate:            5
+markdown:            kramdown
 
 # About/contact
 author:
