--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 # Site settings
-title:       Pixyll
-email:       your_email@example.com
-author:      John Otander
+title:       Anmol Bhullar
+email:       anmol.bhullar@mail.utoronto.ca
+author:      Anmol Bhullar
 description: "A simple, beautiful theme for Jekyll that emphasizes content rather than aesthetic fluff."
 baseurl:     ""
-url:         "http://pixyll.com"
+url:         "http://anmolbhullar.me"
 date_format: "%b %-d, %Y"
 
 # Google services
