--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,14 @@
 # Site settings
-title:       Anmol Bhullar
+title:       An Undergraduate Attempts Math
 email:       anmol.bhullar@mail.utoronto.ca
 author:      Anmol Bhullar
 description: "A simple, beautiful theme for Jekyll that emphasizes content rather than aesthetic fluff."
 baseurl:     ""
 url:         "http://anmolbhullar.me"
 date_format: "%b %-d, %Y"
+
+# Markdown for mathjax
+markdown: kramdown
 
 # Google services
 google_verification:
@@ -107,7 +110,7 @@ text:
       sending:  'sending..'
       sent:     'Message sent!'
       error:    'Error!'
-  thanks: 'Thanks for contacting us. We will reply as soon as possible.'
+  thanks: 'Thanks for contacting us. I will reply as soon as possible.'
   og_locale: 'en_US'
 
 # Build settings
